2004-02-18  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-b40
	* Rewrote the setup/ghcc.php script.  It's still not linked from
	  anywhere just yet.

2004-02-18  Don Willingham <donwillingh@users.sourceforge.net> 1.4.3-cvs-b39
	* Change: html_wrap/inline_imagewrap.inc in response to sf.net bug
	          #890804 titled "exposed php variable in inline_imagewrap.inc"
	          by changing $borderColor to <?php echo $borderColor ?>.
	          Thanks to Ron Rothman for reporting this bug.

2004-02-17  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b38

	* Sliced off the ChangeLog at the latest release. Spill-over is
	  archived in ChangeLog.archive.gz to be more compact and make
	  cvs updating quicker.
	* Re-enabled Christian's fix in fs_win32.php, we're finally agreed
	  on how to handle this.

2004-02-17 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b37

	* Change: Adjust secure.sh and config.sh to fit with Debian.

2004-02-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b36

	* Change: Config Wizard is global $GALLERY_BASEDIR free.

	* Bugfix: Correct one missing gallery_validate_email rename.

	* Change: Move checkVersions from util.php into settup/functions.inc

	* Change: Added GPL / Copyright to setup/* files.

2004-02-14 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b35

	* Change: Renamed validate_email() in gallery_validate_email()
		  to avoid problems with PNphpBB2 integration.

2004-02-12  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b34

	* Simplified and strengthened the hack checks in slideshow.php, on
	  Bharat's advice.

2004-02-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b33

	* Reverted Christian "fix" to remove a cmd.exe invocation: it failed
	  on my machine.

2004-02-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b32

	* Fixed Gallery-wide hack check, fixed gallery-wide recursion for
	  applet slideshow.

2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b31
