@@ -18,6 +18,7 @@ Demian Johnston		<djohnston@users.sourceforge.net>
 Ed Wilts 		<ewilts@ewilts.org>
 Eelco Brolman		<eelco@brolman.nl>
 Jacob Redding		<dexttor@wiredgeek.com>
+Jay Rossiter		<cryptographite@users.sourceforge.net>
 Jens Tkotz		<jens@peino.de>
 Jesse Mullan		<jmullan@visi.com>
 Joan McGalliard		<jefmcg@users.sourceforge.net>
