@@ -1,4 +1,15 @@
+2004-02-18  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b41
+
+	* Fixed Bug #844125: missing CSS class in login.php. (Fix by
+	  cryptographite)
+
+	* Fixed Bug #885369: search.php is now disabled for non-admins if the
+	  search engine is disabled in the Config. Wizard. Previously, the page
+	  was merely hidden, but still worked if linked to directly. (Fix by
+	  cryptographite)
+
 2004-02-18  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-b40
+	
 	* Rewrote the setup/ghcc.php script.  It's still not linked from
 	  anywhere just yet.
 
